examples/test/testpolicy17302.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17302
  namespace: namespace368
spec:
  podSelector:
    matchLabels:
      key2: value12
      key28: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value3
      podSelector:
        matchLabels:
          key43: value32
          key29: value24
